--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,6 +11,9 @@
 			"NODE_VERSION": "lts/*"
 		}
 	},
+    "runArgs": [
+        "--privileged"
+	],
 
 	// Set *default* container specific settings.json values on container create.
 	"settings": { 
