--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,41 +4,15 @@
 //
 // Documentation: https://docs.platformio.org/page/plus/debugging.html
 // Configuration: https://docs.platformio.org/page/projectconf/section_env_debug.html
-
 {
     "version": "0.2.0",
     "configurations": [
         {
-            "type": "platformio-debug",
+            "name": "Python: Current File",
+            "type": "python",
             "request": "launch",
-            "name": "PIO Debug",
-            "executable": "/workspaces/WLED/.pio/build/nodemcuv2/firmware.elf",
-            "projectEnvName": "nodemcuv2",
-            "toolchainBinDir": "/home/vscode/.platformio/packages/toolchain-xtensa/bin",
-            "internalConsoleOptions": "openOnSessionStart",
-            "preLaunchTask": {
-                "type": "PlatformIO",
-                "task": "Pre-Debug"
-            }
-        },
-        {
-            "type": "platformio-debug",
-            "request": "launch",
-            "name": "PIO Debug (skip Pre-Debug)",
-            "executable": "/workspaces/WLED/.pio/build/nodemcuv2/firmware.elf",
-            "projectEnvName": "nodemcuv2",
-            "toolchainBinDir": "/home/vscode/.platformio/packages/toolchain-xtensa/bin",
-            "internalConsoleOptions": "openOnSessionStart"
-        },
-        {
-            "type": "platformio-debug",
-            "request": "launch",
-            "name": "PIO Debug (without uploading)",
-            "executable": "/workspaces/WLED/.pio/build/nodemcuv2/firmware.elf",
-            "projectEnvName": "nodemcuv2",
-            "toolchainBinDir": "/home/vscode/.platformio/packages/toolchain-xtensa/bin",
-            "internalConsoleOptions": "openOnSessionStart",
-            "loadMode": "manual"
+            "program": "${file}",
+            "console": "integratedTerminal"
         }
     ]
 }
