--- a/rpi_docker/docker-compose.yml
+++ b/rpi_docker/docker-compose.yml
@@ -18,4 +18,4 @@ services:
     environment:
       DISPLAY: ${DISPLAY}
       QT_X11_NO_MITSHM: 1
-      FCUURL: "tcp://192.168.1.113:5760"
+      FCUURL: "udpout://127.0.0.1:14550"
