--- a/rpi_docker/dockerfile
+++ b/rpi_docker/dockerfile
@@ -4,7 +4,41 @@ FROM arm32v7/ros:melodic-perception-bionic
 ENV DEBIAN_FRONTEND=noninteractive
 
 # Install MAVROS and some other dependencies for later
-RUN apt-get update && apt-get install -y git ros-melodic-mavros ros-melodic-mavros-extras ros-melodic-mavros-msgs vim wget screen
+RUN apt-get update && \
+    apt-get install -q -y \
+        apt-transport-https \
+        curl \
+        gnupg2 \
+        python \
+        software-properties-common \
+        && \
+    curl "https://bootstrap.pypa.io/pip/2.7/get-pip.py" -o "get-pip2.py" && \
+    /usr/bin/python2 get-pip2.py 
+
+RUN /usr/local/bin/pip2 install --no-cache-dir --upgrade "pip < 21.0" --force-reinstall --ignore-installed PyYAML \
+        setuptools \
+        enum34 \
+        rosdep \
+        rosinstall \
+        catkin_tools \
+        trollius \
+        "vcstool < 0.3" \
+        && \
+    rm -rf ~/.cache/pip 
+
+
+SHELL ["/bin/bash", "-c"]
+RUN apt update && \
+    apt install -y  --no-install-recommends \
+    git ros-melodic-mavros ros-melodic-mavros-extras ros-melodic-mavros-msgs vim wget screen && \
+    rm -rf /var/lib/apt/lists/*
+
+SHELL ["/bin/bash", "-c"] 
+RUN source /opt/ros/melodic/setup.bash && \
+    mkdir -p /root/markset_ws/src && \
+    cd /root/markset_ws && \
+    catkin config --init --mkdirs --extend /opt/ros/melodic --cmake-args -DCMAKE_BUILD_TYPE=Release -DCMAKE_EXPORT_COMPILE_COMMANDS=ON --
+
 
 # Dependency from https://github.com/mavlink/mavros/blob/master/mavros/README.md
 RUN wget https://raw.githubusercontent.com/mavlink/mavros/master/mavros/scripts/install_geographiclib_datasets.sh
@@ -13,6 +47,13 @@ RUN ./install_geographiclib_datasets.sh
 
 # Fix the broken apm_config.yaml
 COPY apm_config.yaml /opt/ros/melodic/share/mavros/launch/apm_config.yaml
+
+RUN mkdir -p /root/markset_ws/src && \
+    cd /root/markset_ws/src && \
+    git clone https://github.com/MISTLab/XbeeMav.git && \
+    cd /root/markset_ws && \
+    catkin build -j2
+
 
 # MAVLink Input
 EXPOSE 5760
