--- a/markset/config.yaml
+++ b/markset/config.yaml
@@ -87,25 +87,36 @@ class_timeline: # note this is a compressed timeline, this needs to be 3 min
       music: five_toots.mp3
       music_timeout: 7  #five short and one long
 
+
 order: 
-  - name: ' NSB'
+  - name: 'NSB '
     color: 0x002200
     music: danger_zone.mp3
     bitmap: bitmaps/nsb.bmp
-  - name: ' NSA/C22'
+    course: 'S'
+    laps: '1'
+  - name: 'NSA '
     color: 0x0000FF
     color2: 0x6a0dad
-    music: sample.wav 
-  - name: ' PORTSM'
+    music: eye_of_the_tiger.mp3
+    course: 'S'
+    laps: '1'
+  - name: 'PORT'
     color: 0x590036
     music: Thunderstruck.mp3 
     bitmap: bitmaps/nsb.bmp
-  - name: ' SPIN'
+    course: 'S'
+    laps: '1'
+  - name: 'SPIN'
     color: 0xC29200
     music: sample.wav 
-  - name: ' J-22'
+    course: 'S'
+    laps: '1'
+  - name: 'J-22'
     color: 0xCC0000
     music: sample.wav 
-  - name: ' J-24'
-    color: 0x662200
-    music: sample.wav
+    course: 'J'
+    laps: '1'
+#   - name: ' J-24'
+#     color: 0x662200
+#     music: sample.wav
