--- a/markset/config.yaml
+++ b/markset/config.yaml
@@ -99,22 +99,22 @@ order:
     color: 0x0000FF
     color2: 0x6a0dad
     music: eye_of_the_tiger.mp3
-    course: 'S'
+    course: 'P'
     laps: '1'
   - name: 'PORT'
     color: 0x590036
     music: Thunderstruck.mp3 
     bitmap: bitmaps/nsb.bmp
-    course: 'S'
+    course: 'P'
     laps: '1'
   - name: 'SPIN'
     color: 0xC29200
-    music: sample.wav 
-    course: 'S'
+    music: pour_some_sugar_on_me.mp3 
+    course: 'P'
     laps: '1'
   - name: 'J-22'
     color: 0xCC0000
-    music: sample.wav 
+    music: welcome_to_the_jungle.mp3 
     course: 'J'
     laps: '1'
 #   - name: ' J-24'
