--- a/markset/config.yaml
+++ b/markset/config.yaml
@@ -89,34 +89,28 @@ class_timeline: # note this is a compressed timeline, this needs to be 3 min
 
 
 order: 
-  - name: 'NSB '
+  - name: 'JAM '
     color: 0x002200
     music: danger_zone.mp3
     bitmap: bitmaps/nsb.bmp
-    course: 'S'
-    laps: '1'
-  - name: 'NSA '
-    color: 0x0000FF
-    color2: 0x6a0dad
-    music: eye_of_the_tiger.mp3
     course: 'P'
     laps: '1'
   - name: 'PORT'
-    color: 0x590036
+    color: 0x0000FF
     music: Thunderstruck.mp3 
     bitmap: bitmaps/nsb.bmp
     course: 'P'
     laps: '1'
   - name: 'SPIN'
-    color: 0xC29200
+    color: 0xCC0000
     music: pour_some_sugar_on_me.mp3 
     course: 'P'
     laps: '1'
-  - name: 'J-22'
-    color: 0xCC0000
-    music: welcome_to_the_jungle.mp3 
-    course: 'J'
-    laps: '1'
+#   - name: 'J-22'
+#     color: 0xCC0000
+#     music: welcome_to_the_jungle.mp3 
+#     course: 'J'
+#     laps: '1'
 #   - name: ' J-24'
 #     color: 0x662200
 #     music: sample.wav
