--- a/rpi_docker/docker-compose.yml
+++ b/rpi_docker/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   mavros:
     container_name: mavros
     image: markset-mavros:latest
-    command: 
+    command: roslaunch mavros apm2.launch fcu_url:=${FCUURL}
     stdin_open: true
     tty: true
     network_mode: "host"
@@ -18,4 +18,4 @@ services:
     environment:
       DISPLAY: ${DISPLAY}
       QT_X11_NO_MITSHM: 1
-      FCUURL: "udpout://127.0.0.1:14550"
+      FCUURL: "udp://@localhost"
