--- a/rpi_docker/dockerfile
+++ b/rpi_docker/dockerfile
@@ -13,7 +13,8 @@ RUN apt-get update && \
         software-properties-common \
         && \
     curl "https://bootstrap.pypa.io/pip/2.7/get-pip.py" -o "get-pip2.py" && \
-    /usr/bin/python2 get-pip2.py 
+    /usr/bin/python2 get-pip2.py && \
+    rm -rf /var/lib/apt/lists/*
 
 RUN /usr/local/bin/pip2 install --no-cache-dir --upgrade "pip < 21.0" --force-reinstall --ignore-installed PyYAML \
         setuptools \
@@ -26,11 +27,11 @@ RUN /usr/local/bin/pip2 install --no-cache-dir --upgrade "pip < 21.0" --force-re
         && \
     rm -rf ~/.cache/pip 
 
-
 SHELL ["/bin/bash", "-c"]
 RUN apt update && \
     apt install -y  --no-install-recommends \
-    git ros-melodic-mavros ros-melodic-mavros-extras ros-melodic-mavros-msgs vim wget screen && \
+    git ros-melodic-mavros ros-melodic-mavros-extras ros-melodic-mavros-msgs vim wget screen \
+    ros-melodic-rosbridge-library ros-melodic-rosbridge-suite && \
     rm -rf /var/lib/apt/lists/*
 
 SHELL ["/bin/bash", "-c"] 
@@ -38,7 +39,6 @@ RUN source /opt/ros/melodic/setup.bash && \
     mkdir -p /root/markset_ws/src && \
     cd /root/markset_ws && \
     catkin config --init --mkdirs --extend /opt/ros/melodic --cmake-args -DCMAKE_BUILD_TYPE=Release -DCMAKE_EXPORT_COMPILE_COMMANDS=ON --
-
 
 # Dependency from https://github.com/mavlink/mavros/blob/master/mavros/README.md
 RUN wget https://raw.githubusercontent.com/mavlink/mavros/master/mavros/scripts/install_geographiclib_datasets.sh
@@ -52,10 +52,8 @@ COPY .bashrc /root/.bashrc
 # MAVLink Input
 EXPOSE 5760
 
-# Envs
-ENV FCUURL=udp://@localhost
-
 # Finally the command
 COPY entrypoint.sh /
 RUN chmod +x /entrypoint.sh
-ENTRYPOINT /entrypoint.sh ${FCUURL}
+ENTRYPOINT ["/entrypoint.sh"] 
+CMD ["/bin/bash"]
