--- a/rpi_docker/dockerfile
+++ b/rpi_docker/dockerfile
@@ -1,4 +1,4 @@
-FROM arm32v7/ros:melodic-perception-bionic
+FROM arm64v8/ros:rolling-perception
 
 # Trick to get apt-get to not prompt for timezone in tzdata
 ENV DEBIAN_FRONTEND=noninteractive
@@ -9,36 +9,40 @@ RUN apt-get update && \
         apt-transport-https \
         curl \
         gnupg2 \
-        python \
-        software-properties-common \
-        && \
-    curl "https://bootstrap.pypa.io/pip/2.7/get-pip.py" -o "get-pip2.py" && \
-    /usr/bin/python2 get-pip2.py && \
+        python3-pip \
+        python3-pyaudio \
+        libgpiod2 python3-libgpiod \
+        portaudio19-dev \
+        software-properties-common && \
+    pip3 install --no-cache-dir --upgrade pip gpiod && \
     rm -rf /var/lib/apt/lists/*
 
-RUN /usr/local/bin/pip2 install --no-cache-dir --upgrade "pip < 21.0" --force-reinstall --ignore-installed PyYAML \
-        setuptools \
-        enum34 \
-        rosdep \
-        rosinstall \
-        catkin_tools \
-        trollius \
-        "vcstool < 0.3" \
+RUN /usr/local/bin/pip3 install \
+        python-dateutil>=2.8.1 \
+        adafruit-circuitpython-lis3dh adafruit-circuitpython-neopixel adafruit-blinka \
         && \
     rm -rf ~/.cache/pip 
+
+RUN curl -fsSL https://deb.nodesource.com/setup_current.x | sudo -E bash -
+
+SHELL ["/bin/bash", "-c"]
+RUN apt update && \
+    apt install -f -y  --no-install-recommends \
+    build-essential nodejs && \
+    rm -rf /var/lib/apt/lists/*
 
 SHELL ["/bin/bash", "-c"]
 RUN apt update && \
     apt install -y  --no-install-recommends \
-    git ros-melodic-mavros ros-melodic-mavros-extras ros-melodic-mavros-msgs vim wget screen \
-    ros-melodic-rosbridge-library ros-melodic-rosbridge-suite && \
+    git ros-rolling-mavros ros-rolling-mavros-extras ros-rolling-mavros-msgs vim wget screen \
+    ros-rolling-rosbridge-library ros-rolling-rosbridge-suite && \
     rm -rf /var/lib/apt/lists/*
 
 SHELL ["/bin/bash", "-c"] 
-RUN source /opt/ros/melodic/setup.bash && \
-    mkdir -p /root/markset_ws/src && \
-    cd /root/markset_ws && \
-    catkin config --init --mkdirs --extend /opt/ros/melodic --cmake-args -DCMAKE_BUILD_TYPE=Release -DCMAKE_EXPORT_COMPILE_COMMANDS=ON --
+RUN source /opt/ros/rolling/setup.bash && \
+    mkdir -p /home/root/markset_ws/src && \
+    cd /home/root/markset_ws 
+    # catkin config --init --mkdirs --extend /opt/ros/rolling --cmake-args -DCMAKE_BUILD_TYPE=Release -DCMAKE_EXPORT_COMPILE_COMMANDS=ON --
 
 # Dependency from https://github.com/mavlink/mavros/blob/master/mavros/README.md
 RUN wget https://raw.githubusercontent.com/mavlink/mavros/master/mavros/scripts/install_geographiclib_datasets.sh
@@ -46,7 +50,8 @@ RUN chmod +x install_geographiclib_datasets.sh
 RUN ./install_geographiclib_datasets.sh
 
 # Fix the broken apm_config.yaml
-COPY apm_config.yaml /opt/ros/melodic/share/mavros/launch/apm_config.yaml
+COPY apm_config.yaml /opt/ros/rolling/share/mavros/launch/apm_config.yaml
+
 COPY .bashrc /root/.bashrc
 
 # MAVLink Input
@@ -54,6 +59,7 @@ EXPOSE 5760
 
 # Finally the command
 COPY entrypoint.sh /
-RUN chmod +x /entrypoint.sh
+RUN chmod +x /entrypoint.sh 
+
 ENTRYPOINT ["/entrypoint.sh"] 
 CMD ["/bin/bash"]
