--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -35,11 +35,11 @@ WORKDIR /usr/src/app
 # RUN pip install -r requirements.txt
 
 # This will copy all files in our root to the working  directory in the container
-COPY markset ./
+COPY . ./
 
 # Enable udevd so that plugged dynamic hardware devices show up in our container.
 ENV UDEV=1
 
 # main.py will run when container starts up on the device
 #CMD ["python","-u","tests/do_nothing.py"]
-CMD ["./code", "tunnel", "--accept-server-license-terms", "--name", "markset_tunnel"]
+CMD ["./code", "tunnel", "--accept-server-license-terms", "--name", "markset_pib_tunnel"]
