--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -14,20 +14,16 @@ RUN apt-get update && \
         gnupg2 \
         python3-pyaudio \
         portaudio19-dev \
-        python3-pygame \
+        libsdl2-mixer-dev libsdl2-image-dev libsdl2-ttf-dev libfreetype6-dev \
         software-properties-common && \
     rm -rf /var/lib/apt/lists/*
 
 RUN /usr/local/bin/pip3 install \
         python-dateutil>=2.8.1 \
         gpiod adafruit-circuitpython-lis3dh adafruit-circuitpython-neopixel adafruit-blinka RPi.GPIO rpi_ws281x \
-        asyncio quart coloredlogs apscheduler adafruit-circuitpython-framebuf pyyaml pygame \
+        asyncio quart coloredlogs apscheduler adafruit-circuitpython-framebuf pyyaml  pygame \
         && \
     rm -rf ~/.cache/pip 
-
-
-# I don't know why I have to do this.. 
-RUN pip3 uninstall pygame && pip cache purge && pip3 install pygame
 
 # Set our working directory
 WORKDIR /usr/src/app
@@ -43,6 +39,7 @@ WORKDIR /usr/src/app
 RUN git clone https://github.com/duwke/markset.git 
 
 WORKDIR /usr/src/app/markset
+COPY markset/music ./markset/music
 
 # Enable udevd so that plugged dynamic hardware devices show up in our container.
 ENV UDEV=1
