--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -12,6 +12,7 @@ RUN apt-get update && \
         apt-transport-https \
         curl \
         gnupg2 \
+        htop \
         python3-pyaudio \
         portaudio19-dev \
         libsdl2-mixer-dev libsdl2-image-dev libsdl2-ttf-dev libfreetype6-dev \
