--- a/Dockerfile.template
+++ b/Dockerfile.template
@@ -13,6 +13,7 @@ RUN apt-get update && \
         curl \
         gnupg2 \
         htop \
+        vim \
         python3-pyaudio \
         portaudio19-dev \
         libsdl2-mixer-dev libsdl2-image-dev libsdl2-ttf-dev libfreetype6-dev \
