--- a/markset/config.yaml
+++ b/markset/config.yaml
@@ -197,29 +197,25 @@ order:
     color: 0x0000FF
     music: Thunderstruck.mp3 
     bitmap: bitmaps/nsb.bmp
-    course: 'P'
-    laps: '1'
+    course: 'S'
+    laps: ''
   - name: 'JAM '
     color: 0x002200
     music: welcome_to_the_jungle.mp3
     bitmap: bitmaps/nsb.bmp
-    course: 'P'
-    laps: '1'
-  - name: 'J-22'
-    color: 0x351C75
-    music: pour_some_sugar_on_me.mp3 
-    course: 'P'
-    laps: '1'
+    course: 'S'
+    laps: ''
   - name: 'SPIN'
     color: 0xCC0000
     music: pour_some_sugar_on_me.mp3 
-    course: 'P'
-    laps: '1'
-#   - name: 'J-22'
-#     color: 0xCC0000
-#     music: welcome_to_the_jungle.mp3 
-#     course: 'J'
-#     laps: '1'
+    course: 'S'
+    laps: ''
+    
+#  - name: 'J-22'
+#    color: 0x351C75
+#    music: pour_some_sugar_on_me.mp3 
+#    course: 'S'
+#    laps: ''
 #   - name: ' J-24'
 #     color: 0x662200
 #     music: sample.wav
