--- a/markset/config.yaml
+++ b/markset/config.yaml
@@ -176,23 +176,23 @@ order:
   - name: 'PORT'
     color: 0x0000FF
     music: Thunderstruck.mp3 
-    course: 'S'
-    laps: ''
+    course: 'L'
+    laps: '1'
   - name: 'JAM '
     color: 0x002200
     music: welcome_to_the_jungle.mp3
-    course: 'S'
-    laps: ''
+    course: 'L'
+    laps: '1'
   - name: 'SPIN'
     color: 0xCC0000
     music: pour_some_sugar_on_me.mp3 
-    course: 'S'
-    laps: ''
+    course: 'L'
+    laps: '1'
   - name: 'J-22'
-    color: 0x351C75
+    color: 0x22114D
     music: eye_of_the_tiger.mp3 
-    course: 'S'
-    laps: ''
+    course: 'L'
+    laps: '1'
 #   - name: ' J-24'
 #     color: 0x662200
 #     music: sample.wav
