--- a/camera_server/Dockerfile.template
+++ b/camera_server/Dockerfile.template
@@ -27,8 +27,9 @@ RUN /usr/local/bin/pip3 install \
     
 WORKDIR /usr/src/app
 RUN git clone https://github.com/duwke/markset.git 
+WORKDIR /usr/src/app/markset/camera_server
 
-CMD ["python3", "camera_server/camera_webserver.py"]
+CMD ["python3", "./camera_webserver.py"]
 
 # found at https://github.com/gaborvecsei/YouTube-Live-Stream-Docker/blob/master/youtube_stream_image/code/youtube_stream.py
 
