--- a/camera_server/Dockerfile.template
+++ b/camera_server/Dockerfile.template
@@ -6,33 +6,49 @@ FROM balenalib/raspberrypi4-64-ubuntu-python:jammy-build
 # Trick to get apt-get to not prompt for timezone in tzdata
 ENV DEBIAN_FRONTEND=noninteractive
 
+# Install dependencies
 RUN apt-get update && \
-    apt-get install -q -y \
-        apt-transport-https \
-        curl \
-        gnupg2 \
-        htop \
-        vim \
-        python3-pyaudio \
-        portaudio19-dev \
-        libsdl2-mixer-dev libsdl2-image-dev libsdl2-ttf-dev libfreetype6-dev \
-        software-properties-common && \
-    rm -rf /var/lib/apt/lists/*
+  apt-get install -yq \
+    python3 \
+    python3-dev \
+    python3-pip \
+    python3-setuptools \
+    gstreamer-1.0 \
+    v4l-utils \
+    libopus-dev \
+    libvpx-dev \
+    libsrtp2-dev \
+    libopencv-dev \
+    libatlas3-base \
+    libatlas-base-dev \
+    libjasper-dev \
+    libilmbase12 \
+    libopenexr22 \
+    libavformat-dev \
+    libswscale-dev \
+    libqtgui4 \
+    libqt4-test \
+    libavdevice-dev \
+    libavfilter-dev \
+    libavcodec-dev \
+  && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-RUN /usr/local/bin/pip3 install \
-        python-dateutil>=2.8.1 \
-        && \
-    rm -rf ~/.cache/pip 
+# Enable the v4l2 driver for the Raspberry Pi camera
+#RUN printf "bcm2835-v4l2\n" >> /etc/modules
+RUN pip3 install --upgrade pip 
+RUN pip3 install async-timeout av==6.1.0
+RUN pip3 install pyee==8.2.2 aiohttp aiohttp_basicauth==0.1.3 aioice==0.6.10 aiortc==0.9.11 numpy==1.15.4 opencv-python==3.4.4.19 --index-url https://www.piwheels.org/simple
+
 
     
 WORKDIR /usr/src/app
 RUN git clone https://github.com/duwke/markset.git 
 WORKDIR /usr/src/app/markset/camera_server
 
-CMD ["python3", "./camera_webserver.py"]
 
 # found at https://github.com/gaborvecsei/YouTube-Live-Stream-Docker/blob/master/youtube_stream_image/code/youtube_stream.py
-
+#CMD ["/bin/bash"]
+CMD ["python3", "server.py"]
 # CMD ["avconv", "-loglevel", "quiet", "-ar", "44100", "-ac", "2", "-f", "s16le", "-i", "/dev/zero", "-f", "video4linux2", "-s", \
 #                   "640x360", "-r", "10", "-i", "/dev/video0", "-f", "flv", \
 #                   "rtmp://a.rtmp.youtube.com/live2/{0}".format(YOUTUBE_LIVE_KEY)]
