--- a/camera_server/Dockerfile.template
+++ b/camera_server/Dockerfile.template
@@ -1,4 +1,4 @@
-FROM balenalib/raspberrypi4-64-ubuntu-python:jammy-build 
+FROM balenalib/raspberrypi4-64-debian:bullseye-build
 # use `install_packages` if you need to install dependencies,
 # for instance if you need git, just uncomment the line below.
 # RUN install_packages git
@@ -9,45 +9,17 @@ ENV DEBIAN_FRONTEND=noninteractive
 # Install dependencies
 RUN apt-get update && \
   apt-get install -yq \
-    python3 \
-    python3-dev \
-    python3-pip \
-    python3-setuptools \
-    gstreamer-1.0 \
-    v4l-utils \
-    libopus-dev \
-    libvpx-dev \
-    libsrtp2-dev \
-    libopencv-dev \
-    libatlas3-base \
-    libatlas-base-dev \
-    libilmbase12 \
-    libopenexr22 \
-    libavformat-dev \
-    libswscale-dev \
-    libqtgui4 \
-    libqt4-test \
-    libavdevice-dev \
-    libavfilter-dev \
-    libavcodec-dev \
+    python3-picamera2 --no-install-recommends \
   && apt-get clean && rm -rf /var/lib/apt/lists/*
 
-# Enable the v4l2 driver for the Raspberry Pi camera
-#RUN printf "bcm2835-v4l2\n" >> /etc/modules
-RUN pip3 install --upgrade pip 
-RUN pip3 install async-timeout av==6.1.0
-RUN pip3 install pyee==8.2.2 aiohttp aiohttp_basicauth==0.1.3 aioice==0.6.10 aiortc==0.9.11 numpy==1.15.4 opencv-python==3.4.4.19 --index-url https://www.piwheels.org/simple
-
-
-    
 WORKDIR /usr/src/app
 RUN git clone https://github.com/duwke/markset.git 
 WORKDIR /usr/src/app/markset/camera_server
 
 
 # found at https://github.com/gaborvecsei/YouTube-Live-Stream-Docker/blob/master/youtube_stream_image/code/youtube_stream.py
-#CMD ["/bin/bash"]
-CMD ["python3", "server.py"]
+CMD ["/bin/bash"]
+# CMD ["python3", "server.py"]
 # CMD ["avconv", "-loglevel", "quiet", "-ar", "44100", "-ac", "2", "-f", "s16le", "-i", "/dev/zero", "-f", "video4linux2", "-s", \
 #                   "640x360", "-r", "10", "-i", "/dev/video0", "-f", "flv", \
 #                   "rtmp://a.rtmp.youtube.com/live2/{0}".format(YOUTUBE_LIVE_KEY)]
