--- a/camera_server/Dockerfile.template
+++ b/camera_server/Dockerfile.template
@@ -21,6 +21,7 @@ RUN git clone https://github.com/duwke/markset.git
 WORKDIR /usr/src/app/markset/camera_server
 RUN chmod +x start.sh
 # from https://github.com/balena-io-experimental/libcamera-apps/blob/master/Dockerfile.template
+#RUN usermod -a -G video root
 ENV UDEV=on
 # found at https://github.com/gaborvecsei/YouTube-Live-Stream-Docker/blob/master/youtube_stream_image/code/youtube_stream.py
 CMD ["sh","./start.sh"]
