--- a/camera_server/Dockerfile.template
+++ b/camera_server/Dockerfile.template
@@ -19,8 +19,8 @@ RUN apt-get update && \
   && apt-get clean && rm -rf /var/lib/apt/lists/*
 
 WORKDIR /usr/src/app
-RUN git clone https://github.com/duwke/markset.git 
-WORKDIR /usr/src/app/markset/camera_server
+COPY . camera_server
+WORKDIR /usr/src/app/camera_server
 RUN chmod +x start.sh
 # from https://github.com/balena-io-experimental/libcamera-apps/blob/master/Dockerfile.template
 #RUN usermod -a -G video root
@@ -33,3 +33,6 @@ CMD ["sh","./start.sh"]
 # CMD ["avconv", "-loglevel", "quiet", "-ar", "44100", "-ac", "2", "-f", "s16le", "-i", "/dev/zero", "-f", "video4linux2", "-s", \
 #                   "640x360", "-r", "10", "-i", "/dev/video0", "-f", "flv", \
 #                   "rtmp://a.rtmp.youtube.com/live2/{0}".format(YOUTUBE_LIVE_KEY)]
+
+#ffmpeg -ar 44100 -ac 2 -f s16le -i /dev/zero -f video4linux2 -s 640x360 -r 10 -i /dev/video0 -f flv rtmp://a.rtmp.youtube.com/live2/test
+#ffmpeg -re -f v4l2 -i /dev/video0 -c:v libx264 -preset veryfast -maxrate 3000k -bufsize 6000k -pix_fmt yuv420p -g 50 -an -f flv rtmp://a.rtmp.youtube.com/live2/test
