--- a/camera_server/Dockerfile.template
+++ b/camera_server/Dockerfile.template
@@ -14,6 +14,7 @@ RUN apt-get update && \
     vim \
     ffmpeg \
     python3 \
+    htop \
     v4l-utils \
     python3-picamera2 --no-install-recommends \
   && apt-get clean && rm -rf /var/lib/apt/lists/*
