--- a/markset/Dockerfile.template
+++ b/markset/Dockerfile.template
@@ -43,6 +43,7 @@ RUN git clone https://github.com/duwke/markset.git
 WORKDIR /usr/src/app/markset/markset
 
 COPY music ./music
+COPY config.yaml ./config.yaml
 
 # Enable udevd so that plugged dynamic hardware devices show up in our container.
 ENV UDEV=1
