--- a/markset/config.yaml
+++ b/markset/config.yaml
@@ -188,7 +188,7 @@ order:
     music: pour_some_sugar_on_me.mp3 
     course: 'L'
     laps: '1'
-  - name: 'CATS'
+  - name: 'J22 '
     color: 0x030103
     music: eye_of_the_tiger.mp3 
     course: 'L'
